--- a/client/community/duncan-village.html
+++ b/client/community/duncan-village.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
   <script src="../app.js" defer></script>
 </head>
-<body>
+<body class="page map-background page-community">
   <div id="topbar">
     <a href="/">iTaxi-Finder</a>
     <a href="/">Route Finder</a>
@@ -17,10 +17,10 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <div style="position:absolute;top:60px;left:10px;right:10px;bottom:10px;overflow:auto;background:rgba(255,255,255,0.85);padding:20px;z-index:200;">
+  <main class="content-panel content-panel--narrow overlay-panel">
     <h1>Duncan Village</h1>
     <p>No posts yet.</p>
-  </div>
+  </main>
   <div id="map"></div>
 </body>
 </html>
