--- a/client/about.html
+++ b/client/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body>
+<body class="page map-background page-about">
   <div id="topbar">
     <a href="/">iTaxi-Finder</a>
     <a href="/">Route Finder</a>
@@ -17,10 +17,16 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <div style="position:absolute;top:60px;left:10px;right:10px;bottom:10px;overflow:auto;background:rgba(255,255,255,0.85);padding:20px;z-index:200;">
-    <h1>About iTaxi-Finder</h1>
-    <p>iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. By publishing useful route intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where available, live taxi locations from a lightweight driver app (even via WhatsApp Live Location)—we make everyday commutes clearer and grow demand for operators. Fleet owners get vehicle usage and location analytics to spot efficiency gains and improve profits. A future-facing parcel-delivery module leverages the existing taxi network for low-cost, near-route deliveries. The Community page surfaces geo-tagged social posts along mapped routes and highlights sponsor partners.</p>
-  </div>
+  <main class="content-panel content-panel--narrow overlay-panel" aria-labelledby="about-heading">
+    <h1 id="about-heading">About iTaxi-Finder</h1>
+    <p>iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. By publishing useful route
+      intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where available, live taxi
+      locations from a lightweight driver app (even via WhatsApp Live Location)—we make everyday commutes clearer and grow demand
+      for operators.</p>
+    <p>Fleet owners get vehicle usage and location analytics to spot efficiency gains and improve profits. A future-facing
+      parcel-delivery module leverages the existing taxi network for low-cost, near-route deliveries. The Community page surfaces
+      geo-tagged social posts along mapped routes and highlights sponsor partners.</p>
+  </main>
   <div id="map"></div>
 </body>
 </html>
