--- a/client/delivery.html
+++ b/client/delivery.html
@@ -23,7 +23,7 @@
       way.”</span>
     <button type="button" data-dismiss-banner aria-label="Dismiss Delivery Extenda banner">Hide</button>
   </div>
-  <main class="content-panel" aria-labelledby="delivery-heading">
+  <main class="content-panel overlay-panel" aria-labelledby="delivery-heading">
     <h1 id="delivery-heading">Delivery Extenda</h1>
     <p>Connect township fleets, depots, and trusted partners to deliver parcels efficiently along existing minibus-taxi corridors.
       Delivery Extenda wraps bookings, routing, and proof-of-handover into one coordinated workflow.</p>
