--- a/client/index.html
+++ b/client/index.html
@@ -3,33 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>iTaxi-Finder</title>
+  <title>iTaxi-Finder Platform</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="app.js" defer></script>
 </head>
-<body class="page page-route-finder">
+<body class="page map-background page-home">
   <div id="topbar">
-    <a href="/">iTaxi-Finder</a>
-    <a href="/">Route Finder</a>
+    <a href="/" aria-current="page">iTaxi-Finder</a>
+    <a href="/route-finder.html">Route Finder</a>
     <a href="/route-adder.html">Route Adder</a>
     <a href="/delivery.html">Delivery</a>
     <a href="/community.html">Community</a>
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <form id="search" class="overlay-panel" role="search" data-static-form>
-    <input type="search" name="q" placeholder="Search areas, stops or saved routes" aria-label="Search routes" />
-    <button type="submit" class="cta secondary">Find Route</button>
-  </form>
-  <main class="content-panel overlay-panel" aria-labelledby="finder-heading">
-    <h1 id="finder-heading">Discover South Africa's live minibus-taxi network</h1>
-    <p>Pan around the interactive map to reveal frequently used taxi corridors. Use the search above to spotlight specific townships,
-      stops, or saved routes, then tap a highlighted segment to see fares, hand signals, and peak-time insights.</p>
+  <section class="content-panel overlay-panel content-panel--home" aria-labelledby="home-heading">
+    <h1 id="home-heading">Mapping the minibus-taxi network in real time</h1>
+    <p>
+      iTaxi-Finder surfaces trusted commuter intelligence from every South African metro. Overlay the live taxi map,
+      inspect frequency heatmaps, and capture the gestures and fares that help riders choose confidently.
+    </p>
+    <p>
+      Jump into the Route Finder to explore the network around you, or open the Route Adder to snap accurate new
+      alignments directly to the roads your drivers use every day.
+    </p>
     <div class="cta-row">
-      <a class="cta" href="#map">View nearby routes</a>
+      <a class="cta" href="/route-finder.html">Explore routes</a>
       <a class="cta secondary" href="/route-adder.html">Add a new route</a>
     </div>
-  </main>
+  </section>
   <div id="map"></div>
 </body>
 </html>
