--- a/client/registration.html
+++ b/client/registration.html
@@ -10,7 +10,7 @@
 <body class="page map-background page-registration">
   <div id="topbar">
     <a href="/">iTaxi-Finder</a>
-    <a href="/">Route Finder</a>
+    <a href="/route-finder.html">Route Finder</a>
     <a href="/route-adder.html">Route Adder</a>
     <a href="/delivery.html">Delivery</a>
     <a href="/community.html">Community</a>
