Add route deletion controls and refreshed overlays

--- a/client/index.html
+++ b/client/index.html
@@ -18,14 +18,16 @@
     <a href="/about.html">About</a>
   </div>
   <section class="content-panel overlay-panel content-panel--home" aria-labelledby="home-heading">
-    <h1 id="home-heading">Mapping the minibus-taxi network in real time</h1>
+    <h1 id="home-heading">iTaxi-Finder keeps every commute in the know</h1>
     <p>
-      iTaxi-Finder surfaces trusted commuter intelligence from every South African metro. Overlay the live taxi map,
-      inspect frequency heatmaps, and capture the gestures and fares that help riders choose confidently.
+      We built iTaxi-Finder to arm everyday commuters with clear, street-level taxi intel no matter where they live or
+      travel in South Africa. Tap into local hand signals, fares, and route variations so you always know which taxi to
+      catch and where it will take you.
     </p>
     <p>
-      Jump into the Route Finder to explore the network around you, or open the Route Adder to snap accurate new
-      alignments directly to the roads your drivers use every day.
+      Fleet owners and managers can watch their taxis in real time, spot gaps in coverage, and guide drivers with the
+      same live map. Explore the Route Finder to see what’s running nearby, or open the Route Adder to chart new
+      corridors and keep your data sharp.
     </p>
     <div class="cta-row">
       <a class="cta" href="/route-finder.html">Explore routes</a>
