--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -11,12 +11,57 @@
   <div id="topbar">
     <a href="/">iTaxi-Finder</a>
     <a href="/route-finder.html">Route Finder</a>
-    <a href="/route-adder.html">Route Adder</a>
+    <a href="/route-adder.html" aria-current="page">Route Adder</a>
     <a href="/delivery.html">Delivery</a>
     <a href="/community.html">Community</a>
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
+  <section id="editor-guide" class="overlay-panel editor-guide" aria-labelledby="editor-guide-title">
+    <div class="editor-guide__content" id="editor-guide-content">
+      <h1 id="editor-guide-title">Start drawing a route</h1>
+      <p>
+        Choose <strong>Draw</strong>, click along the corridor your taxis follow, then press <strong>Snap to Road</strong>
+        for a clean, map-ready path. Save once the green snapped line looks right.
+      </p>
+    </div>
+    <button
+      type="button"
+      class="editor-guide__toggle link-button"
+      data-guide-toggle
+      aria-expanded="true"
+      aria-controls="editor-guide-content"
+    >
+      Hide tips
+    </button>
+  </section>
+  <section
+    id="saved-routes-panel"
+    class="overlay-panel route-adder-saved"
+    aria-labelledby="saved-routes-heading"
+  >
+    <div class="route-adder-saved__header">
+      <h2 id="saved-routes-heading">Saved routes</h2>
+      <button type="button" class="link-button" data-saved-routes-refresh>Refresh</button>
+    </div>
+    <p class="route-adder-saved__intro">
+      Clean up old corridors from the system. Delete a route below when it no longer reflects real-world operations.
+    </p>
+    <ul
+      id="saved-routes-list"
+      class="route-adder-saved__list"
+      data-saved-routes-list
+      aria-live="polite"
+      aria-busy="false"
+    ></ul>
+    <p
+      id="saved-routes-feedback"
+      class="route-adder-saved__feedback"
+      role="status"
+      aria-live="polite"
+      hidden
+    ></p>
+  </section>
   <aside id="editor-tools" class="overlay-panel" aria-label="Route editing tools">
     <p id="editor-status" class="editor-status" role="status" aria-live="polite">
       Select "Draw" to start plotting a new taxi route.
