Enable draggable overlays and restore route adder map

--- a/client/about.html
+++ b/client/about.html
@@ -17,7 +17,12 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <main class="content-panel content-panel--narrow overlay-panel" aria-labelledby="about-heading">
+  <main
+    class="content-panel content-panel--narrow overlay-panel"
+    aria-labelledby="about-heading"
+    data-draggable-overlay
+  >
+    <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="about-heading">About iTaxi-Finder</h1>
     <p>iTaxi-Finder is a live mapping and analytics platform for South Africa’s minibus-taxi ecosystem. By publishing useful route
       intel—common routes and variations with frequency ratings, fares, destination hand-signals, and, where available, live taxi
