--- a/client/community.html
+++ b/client/community.html
@@ -17,7 +17,12 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <main class="content-panel overlay-panel" aria-labelledby="community-heading">
+  <main
+    class="content-panel overlay-panel"
+    aria-labelledby="community-heading"
+    data-draggable-overlay
+  >
+    <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="community-heading">Community noticeboard</h1>
     <p>Explore township-specific hubs for announcements, lost-and-found alerts, and route news. Each page is a canvas for local
       operators, commuters, and sponsors to share updates anchored to the live map.</p>
