--- a/client/community/ga-rankuwa.html
+++ b/client/community/ga-rankuwa.html
@@ -17,7 +17,9 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <main class="content-panel content-panel--narrow overlay-panel">
+  <main class="content-panel content-panel--narrow overlay-panel" data-draggable-overlay>
+    <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
+
     <h1>Ga-Rankuwa</h1>
     <p>No posts yet.</p>
   </main>
