--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,12 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <section class="content-panel overlay-panel content-panel--home" aria-labelledby="home-heading">
+  <section
+    class="content-panel overlay-panel content-panel--home"
+    aria-labelledby="home-heading"
+    data-draggable-overlay
+  >
+    <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="home-heading">iTaxi-Finder keeps every commute in the know</h1>
     <p>
       We built iTaxi-Finder to arm everyday commuters with clear, street-level taxi intel no matter where they live or
