--- a/client/registration.html
+++ b/client/registration.html
@@ -17,7 +17,12 @@
     <a href="/registration.html">Registration</a>
     <a href="/about.html">About</a>
   </div>
-  <main class="content-panel overlay-panel" aria-labelledby="registration-heading">
+  <main
+    class="content-panel overlay-panel"
+    aria-labelledby="registration-heading"
+    data-draggable-overlay
+  >
+    <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <h1 id="registration-heading">Join the iTaxi-Finder network</h1>
     <p>Register your role to unlock tools tailored for collectors, drivers, depot owners, and partners. We capture just enough
       information to verify your business, route alignment, and preferred contact channels before activating your workspace.</p>
