Enable scroll zoom on route adder map

--- a/client/route-adder.html
+++ b/client/route-adder.html
@@ -55,7 +55,8 @@
   >
     <div class="overlay-drag-handle" data-drag-handle aria-hidden="true"></div>
     <p id="editor-status" class="editor-status" role="status" aria-live="polite">
-      Select "Draw" to start plotting a new taxi route.
+      Select "Draw" to start plotting a new taxi route, and select at least two points along the path you want to place a
+      route onto to begin. One segment is added to your route per 'click' along the path.
     </p>
     <button type="button" data-editor-action="draw">Draw</button>
     <button type="button" data-editor-action="snap">Snap to Road</button>
