Standardize overlay minimization and dragging

--- a/client/route-finder.html
+++ b/client/route-finder.html
@@ -32,6 +32,7 @@
     class="overlay-panel"
     role="search"
     data-draggable-overlay
+    data-overlay-label="Route search"
   >
     <div class="overlay-drag-handle overlay-drag-handle--floating" data-drag-handle aria-hidden="true"></div>
     <label class="visually-hidden" for="search-input">Search routes</label>
